// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code <Code /> size 300 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 4px;
border-bottom-right-radius: 4px;
border-top-left-radius: 4px;
border-top-right-radius: 4px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 12px;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
letter-spacing: 0;
line-height: 16px;
line-height: 20px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


"<code class=\\"ub-fnt-sze_12px ub-f-wght_400 ub-ln-ht_16px ub-ltr-spc_0 ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_4px ub-bbrr_4px ub-btlr_4px ub-btrr_4px ub-box-szg_border-box\\">Text 300</code>"
`;

exports[`Code <Code /> size 300 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 12px;
font-weight: 400;
letter-spacing: 0;
line-height: 16px;


"<code class=\\"ub-fnt-sze_12px ub-f-wght_400 ub-ln-ht_16px ub-ltr-spc_0 ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box\\">Text 300</code>"
`;

exports[`Code <Code /> size 400 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 4px;
border-bottom-right-radius: 4px;
border-top-left-radius: 4px;
border-top-right-radius: 4px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 20px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


"<code class=\\"ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_4px ub-bbrr_4px ub-btlr_4px ub-btrr_4px ub-box-szg_border-box\\">Text 400</code>"
`;

exports[`Code <Code /> size 400 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 14px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 20px;


"<code class=\\"ub-fnt-sze_14px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box\\">Text 400</code>"
`;

exports[`Code <Code /> size 500 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 4px;
border-bottom-right-radius: 4px;
border-top-left-radius: 4px;
border-top-right-radius: 4px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 16px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 20px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


"<code class=\\"ub-fnt-sze_16px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_4px ub-bbrr_4px ub-btlr_4px ub-btrr_4px ub-box-szg_border-box\\">Text 500</code>"
`;

exports[`Code <Code /> size 500 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 16px;
font-weight: 400;
letter-spacing: -0.05px;
line-height: 20px;


"<code class=\\"ub-fnt-sze_16px ub-f-wght_400 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box\\">Text 500</code>"
`;

exports[`Code <Code /> size 600 renders as expected 1`] = `
Extracted Styles:
background-color: rgba(16, 112, 202, 0.06);
border-bottom-left-radius: 4px;
border-bottom-right-radius: 4px;
border-top-left-radius: 4px;
border-top-right-radius: 4px;
box-shadow: inset 0 0 0 1px rgba(16, 112, 202, 0.14);
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 18px;
font-weight: 400;
letter-spacing: -0.07px;
line-height: 24px;
padding-bottom: 3px;
padding-left: 6px;
padding-right: 6px;
padding-top: 3px;


"<code class=\\"ub-fnt-sze_18px ub-f-wght_400 ub-ln-ht_24px ub-ltr-spc_-0-07px ub-fnt-fam_tawojy ub-color_474d66 ub-bg-clr_rgba16-112-202-0-06 ub-bs_1o2cska ub-pl_6px ub-pr_6px ub-pb_3px ub-pt_3px ub-bblr_4px ub-bbrr_4px ub-btlr_4px ub-btrr_4px ub-box-szg_border-box\\">Text 600</code>"
`;

exports[`Code <Code /> size 600 with minimal appearance specified renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #474d66;
font-family: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
font-size: 18px;
font-weight: 400;
letter-spacing: -0.07px;
line-height: 24px;


"<code class=\\"ub-fnt-sze_18px ub-f-wght_400 ub-ln-ht_24px ub-ltr-spc_-0-07px ub-fnt-fam_tawojy ub-color_474d66 ub-box-szg_border-box\\">Text 600</code>"
`;
